# QtFindReplaceDialog

./: .gitignore  TODO  make-dist.sh  qtfindreplacedialog.pro
dialogs/: CMakeLists.txt  dialogs.pro  finddialog.cpp  finddialog.h  finddialog.ui  findform.cpp  findform.h  findreplace_global.h  findreplacedialog.cpp  findreplacedialog.h  findreplaceform.cpp  findreplaceform.h  findreplaceform.ui  qtfindreplacedialog.h
doc/: Doxyfile  qtfindreplacedialog.dox
examples/: examples.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/: finddialog.cpp  finddialog.h  finddialog.ui  findform.cpp  findform.h  findform.ui  lib.pro  lib_global.h  qtfindreplacedialog.cpp  qtfindreplacedialog.h
